<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <EditText
            android:layout_width="226dp"
            android:layout_height="41dp"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:id="@+id/add_name"
            android:hint="@string/type_name"
            android:fontFamily="casual"
            android:textSize="14sp"
            tools:ignore="MissingConstraints"
            android:autofillHints=""
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="2dp" android:layout_marginStart="2dp" android:layout_marginTop="2dp"
            app:layout_constraintTop_toTopOf="parent"/>

    <EditText
            android:layout_width="226dp"
            android:layout_height="41dp"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:id="@+id/add_breed"
            android:hint="@string/type_breed"
            android:fontFamily="casual"
            android:textSize="14sp"
            tools:ignore="MissingConstraints"
            android:autofillHints=""
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="2dp" android:layout_marginStart="2dp"
            app:layout_constraintTop_toBottomOf="@+id/add_name"/>
    <Button
            android:text="@string/add"
            android:layout_width="225dp"
            android:layout_height="39dp"
            android:id="@+id/add1"
            tools:ignore="MissingConstraints"
            android:background="@drawable/round_style"
            android:fontFamily="casual"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="2dp" android:layout_marginStart="2dp"
            app:layout_constraintTop_toBottomOf="@+id/add_breed"/>

</androidx.constraintlayout.widget.ConstraintLayout>